boreal/tests/assets/invalid_files/parsing/regex_non_ascii_byte.yar
// [error: regex should only contain ascii bytes]
rule a {
    strings:
        $a = /[é]/
    condition:
        $a
}
